Firefox does not display collapsible mediawiki tables
Categories
(Core :: Layout: Tables, defect, P2)
Tracking
()
People
(Reporter: tirerim, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
|
401.81 KB,
image/png
|
Details | |
|
45.08 KB,
text/plain
|
Details | |
|
380 bytes,
text/html
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-release+
dmeehan
:
approval-mozilla-esr128+
|
Details | Review |
Steps to reproduce:
View the page https://fallenlondon.wiki/wiki/User:Tirerim/sandbox/Firefox_Bug . Attempt to expand either of the collapsible tables.
Actual results:
The tables do not expand. Neither table is visible, nor can be made visible.
Expected results:
One of the tables should have been visible when the page loaded. Either of them should have become visible when its "Expand" link was clicked. This works correctly in Firefox 127, but fails in Firefox 128 and 129 (beta). Inspecting one of the td elements shows that it has a negative size in the box model calculation, cancelling out the padding and border; this normally occurs when a table is collapsed, which applies "display: none" to all of the tr elements, but should not happen for an expanded table.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout: Tables' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
•
|
||
Can reproduce the bug with the latest Nightly. The table is not visible.
Additional observation: Sometimes while the page loads the table is visible for a moment but becomes invisible when the page finishes loading.
Bisection:
Bug 1850834 - Don't reframe containing block on insertion when empty. r=jwatt
Differential Revision: https://phabricator.services.mozilla.com/D212373
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1850834
| Assignee | ||
Comment 5•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 6•2 years ago
|
||
Being the last caption is not enough to remove an anonymous table (and
table wrapper).
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 7•2 years ago
|
||
Too late for today's planned dot release. Let's aim to ship this in 129.
Comment 11•2 years ago
|
||
| bugherder | ||
Comment 13•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox129towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 14•2 years ago
|
||
Comment on attachment 9412816 [details]
Bug 1907789 - Fix some edge cases when handling removal / reconstruction of table captions and col groups. r=#layout!
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively well tested code-paths, and scoped change.
- String changes made/needed: none
- Is Android affected?: Yes
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 15•2 years ago
|
||
Comment on attachment 9412816 [details]
Bug 1907789 - Fix some edge cases when handling removal / reconstruction of table captions and col groups. r=#layout!
Approved for 129.0b8
Comment 16•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 17•2 years ago
|
||
Comment on attachment 9412816 [details]
Bug 1907789 - Fix some edge cases when handling removal / reconstruction of table captions and col groups. r=#layout!
Approved for 128.1esr.
Comment 18•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 19•2 years ago
•
|
||
Reproduced this issue following the STR from in comment 0 and using the reduced test case on an old Nightly build from 2024-07-14.
Verified as fixed using latest Nightly build 130.0a1 (20240725093133), Firefox 129.0b8 (20240724091519) and Firefox 128.1.0esr (20240724131306 - treeherder build) across platforms (Windows 11, WIndows 10, macOS 11 and Ubuntu 22.04).
Comment 20•2 years ago
|
||
Comment on attachment 9412816 [details]
Bug 1907789 - Fix some edge cases when handling removal / reconstruction of table captions and col groups. r=#layout!
Approved for 128.0.3.
Comment 21•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 22•2 years ago
|
||
Added to the 128.0.3 relnotes.
Fixed collapsed table rows not appearing when expected in some situations.
Comment 23•2 years ago
|
||
Verified as fixed using Firefox 128.0.3 (20240725162350) on Windows 11, WIndows 10, macOS 11 and Ubuntu 22.04.
Description
•