Bug 1907789 - Fix some edge cases when handling removal / reconstruction of table captions and col groups. r=dholbert, a=dmeehan

Being the last caption is not enough to remove an anonymous table (and
table wrapper).

Differential Revision: https://phabricator.services.mozilla.com/D216587